--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -140,7 +140,7 @@
 
         <div class="col-md-6">
 
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdVendedor">Transportista*</label>
                     @Html.DropDownListFor(q => q.IdTransportista, new SelectList(ViewBag.lst_transportista, "IdTransportista", "Nombre"), new { @class = "form-control", @id = "IdTransportista" })
@@ -154,7 +154,7 @@
                     @Html.ValidationMessageFor(q => q.placa, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="gi_fecha">Fecha</label>
                     <div class="input-group date">
@@ -174,14 +174,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div class="form-group">
                     <label for="pf_observacion">Dirección origen</label>
                     @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control", @id = "Direccion_Origen" })
                     @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="">Inicio traslado</label>
                     <div class="input-group date">
@@ -201,14 +201,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div class="form-group">
                     <label for="pf_observacion">Dirección destino</label>
                     @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control", @id = "Direccion_Destino" })
                     @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="gi_FechaFinTraslado">Fin traslado</label>
                     <div class="input-group date">
@@ -372,6 +372,29 @@
             }
         });
     }
+    function GetInfoProducto(s, e) {
+        $("#Secuencia").text(0);
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdProducto: s.GetValue()
+
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetInfoProducto", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridViewPartial_guias_remision_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
+            },
+            error: function (error) {
+            }
+        });
+    };
 </script>
 
 
