--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -137,8 +137,7 @@
 
 
             <div class="col-md-6">
-
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="form-group">
                         <label for="IdVendedor">Transportista*</label>
                         @Html.DropDownListFor(q => q.IdTransportista, new SelectList(ViewBag.lst_transportista, "IdTransportista", "Nombre"), new { @class = "form-control", @id = "IdTransportista" })
@@ -152,7 +151,7 @@
                         @Html.ValidationMessageFor(q => q.placa, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="form-group">
                         <label for="gi_fecha">Fecha</label>
                         <div class="input-group date">
@@ -172,14 +171,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <div class="form-group">
                         <label for="pf_observacion">Dirección origen</label>
                         @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control", @id = "Direccion_Origen" })
                         @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="form-group">
                         <label for="">Inicio traslado</label>
                         <div class="input-group date">
@@ -199,14 +198,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <div class="form-group">
                         <label for="pf_observacion">Dirección destino</label>
                         @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control", @id = "Direccion_Destino" })
                         @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="form-group">
                         <label for="gi_FechaFinTraslado">Fin traslado</label>
                         <div class="input-group date">
@@ -438,7 +437,7 @@
                             $("#NumGuia_Preimpresa").val(data.data_talonario.NumDocumento);
                         }
                     }
-                }                               
+                }
             },
             error: function (error) {
             }
@@ -459,7 +458,7 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 $("#Direccion_Origen").val(data.Su_Direccion);
-              
+
             },
             error: function (error) {
             }
@@ -536,6 +535,30 @@
             }
         });
     }
+
+    function GetInfoProducto(s, e) {
+        $("#Secuencia").text(0);
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdProducto: s.GetValue()
+
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetInfoProducto", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridViewPartial_guias_remision_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
+            },
+            error: function (error) {
+            }
+        });
+    };
 </script>
 
 
