--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -33,6 +33,19 @@
         selectedIDs = values.join(',');
     }
 
+    var selectedIDs_OS;
+    function OnBeginCallback_OS(s, e) {
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+        e.customArgs["selectedIDs_OS"] = selectedIDs_OS;
+    }
+    function OnSelectionChanged_OS(s, e) {
+        s.GetSelectedFieldValues("IdGeneradoOS", GetSelectedFieldValuesCallback_OS);
+    }
+    function GetSelectedFieldValuesCallback_OS(values) {
+        //Capture all selected keys
+        selectedIDs_OS = values.join(',');
+    }
+
     function MostrarModal() {
         selectedIDs = "";
         var datos = {
@@ -88,6 +101,63 @@
         GridViewPartial_ing_inv_oc_x_ingresar.UnselectRows();
         GridViewPartial_ing_inv_oc_det.PerformCallback();
         $("#OcModal").modal("hide");
+    }
+
+    function MostrarModalOS() {
+        selectedIDs_OS = "";
+        var datos = {
+            IdTransaccionSession:$("#IdTransaccionSession").val(),
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdProveedor: IdProveedor.GetValue()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetList_OrderServicio_PorIngresar", "Deudas", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridViewPartial_ing_inv_os_x_ingresar.PerformCallback();
+                GridViewPartial_ing_inv_os_x_ingresar.UnselectRows();
+                $("#OsModal").modal("show");
+
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function AddOS() {
+        var datos = {
+            IDs: selectedIDs_OS,
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdEmpresa: $("#IdEmpresa").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew_IOS", "Deudas", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridViewPartial_ing_inv_os_x_ingresar.PerformCallback();
+        GridViewPartial_ing_inv_os_x_ingresar.UnselectRows();
+        GridViewPartial_ing_inv_os_det.PerformCallback();
+        $("#OsModal").modal("hide");
     }
 
     function SetValorRetencion(s, e) {
@@ -156,6 +226,26 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" onclick="AddOC();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="modal fade" id="OsModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Ordenes de servicio</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_ing_inv_os_x_ingresar")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddOS();">Aceptar</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
@@ -345,7 +435,10 @@
             </li> 
             <li>
                 <a href="#tab_orden_compra" aria-controls="contabilidad" role="tab" data-toggle="tab">Orden de compra</a>
-            </li>   
+            </li> 
+            <li>
+                <a href="#tab_orden_servicio" aria-controls="compra" role="tab" data-toggle="tab">Orden de servicio</a>
+            </li>    
             <li>
                 <a href="#tab_informacion_pago" aria-controls="contabilidad" role="tab" data-toggle="tab">Información adicional</a>
             </li>                       
@@ -520,6 +613,29 @@
                     </div>
                 </div>
             </div>  
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_orden_servicio">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-1">
+                            <div class="form-group">
+                                <button type="button" class="btn btn-primary form-control" id="btn_buscar_op" onclick="MostrarModalOS();" title="Buscar ingreso por orden de servicio">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="orden_compra"></label>
+                                @Html.Action("GridViewPartial_ing_inv_os_det")
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_informacion_pago">
                 <div class="row">
                     <div class="col-md-12">
