--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -12,6 +12,7 @@
 <script>
     $(function () {
         CargarPuntosDeVenta();
+        GetUltimoDocumento();
         get_info_termino_pago();
         ValidarGrid();
         ValidarCliente();
@@ -28,6 +29,10 @@
         $("#IdSucursal").change(function () {
             Set_NivelDescuento_x_FormaPago();
             CargarPuntosDeVenta();
+            GetUltimoDocumento();
+        });
+        $("#IdPuntoVta").change(function () {
+            GetUltimoDocumento();
         });
         $("#IdCatalogo_FormaPago").change(function () {
             Set_NivelDescuento_x_FormaPago();
@@ -397,6 +402,47 @@
                 }
             });
             GridView_factura_cuotas.PerformCallback();
+       }
+
+    function GetUltimoDocumento() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento", "Factura", new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.data_puntovta != null)
+                {
+                    if (data.data_puntovta.EsElectronico == true)
+                    {
+                        $("#datos_punto_venta1").hide();
+                        $("#datos_punto_venta2").hide();
+                        $("#datos_punto_venta3").hide();
+                    }
+                    else
+                    {
+                        $("#datos_punto_venta1").show();
+                        $("#datos_punto_venta2").show();
+                        $("#datos_punto_venta3").show();
+
+                        if (data.data_talonario != null)
+                        {
+                            $("#vt_serie1").val(data.data_talonario.Establecimiento);
+                            $("#vt_serie2").val(data.data_talonario.PuntoEmision);
+                            $("#vt_NumFactura").val(data.data_talonario.NumDocumento);
+                        }
+                    }
+                }
+            },
+            error: function (error) {
+            }
+        });
     }
 
     var selectedIDs;
@@ -750,7 +796,7 @@
                     @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
                     @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>           
             <div class="col-md-10">
                 <div class="form-group">
                     <label for="IdCliente">Cliente*</label>
@@ -770,6 +816,27 @@
                 <div class="form-group">
                     <label for="DatosCliente">Información adicional</label>
                     <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
+                </div>
+            </div>            
+            <div class="col-md-3" id="datos_punto_venta1">
+                <div class="form-group">
+                    <label for="Serie1">Establecimiento*</label>
+                    @Html.TextBoxFor(q => q.vt_serie1, new { @class = "form-control", @id = "vt_serie1" })
+                    @Html.ValidationMessageFor(q => q.vt_serie1, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3" id="datos_punto_venta2">
+                <div class="form-group">
+                    <label for="Serie2">Pto. Emisión*</label>
+                    @Html.TextBoxFor(q => q.vt_serie2, new { @class = "form-control", @id = "vt_serie2" })
+                    @Html.ValidationMessageFor(q => q.vt_serie2, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6" id="datos_punto_venta3">
+                <div class="form-group">
+                    <label for="NumNota_Impresa"># Documento*</label>
+                    @Html.TextBoxFor(q => q.vt_NumFactura, new { @class = "form-control", @id = "vt_NumFactura" })
+                    @Html.ValidationMessageFor(q => q.vt_NumFactura, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-12">
